--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -123,7 +123,7 @@
 
                                            <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                           <div>You're Invited!</div>
+                                           <div>You're Invited! Cloud Soltuion Hub Public Sector Open House</div>
 
                                         </td>
                                       </tr>
@@ -141,7 +141,7 @@
                                                           <tr>
                                                             <td align="center" bgcolor="#f29111">
 
-                                                              <!--Put destiation URL in href=""-->
+                                                              <!--https://goo.gl/forms/pABaUH1qThL4ANzt1=""-->
                                                               <a href="yourlinkhere" target="_blank" style="font-size: 18px; font-family: Arial, sans-serif; color: #ffffff; text-decoration: none; text-decoration: none; padding-top:12px; padding-bottom:12px; padding-left: 34px; padding-right:34px; border: 2px solid #ffffff; display: inline-block;">Register</a>
 
                                                             </td>
