--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -230,7 +230,7 @@
 
                                                                               <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;November 3, 2018</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;12pm &#45; 1pm</div>
+                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;11am &#45; 1pm</div>
 
                                                                               <div class="cb-h3" align="left"><strong>Location:</strong>&nbsp;Lorem ipsum dolor</div>
 
