--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -123,7 +123,7 @@
 
                                            <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                           <div>Headline here up to three lines of text maximum.</div>
+                                           <div>You're Invited! Reston Cloud Solution Hub Public Sector Open House. </div>
 
                                         </td>
                                       </tr>
