--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -142,7 +142,7 @@
                                                             <td align="center" bgcolor="#f29111">
 
                                                               <!--Put destiation URL in href="https://docs.google.com/forms/d/e/1FAIpQLSephVbWBCeojHabjHdtcbXsM7JIcwedefXX9c4V05mduo4gGQ/viewform?usp=sf_link"-->
-                                                              <a href="yourlinkhere" target="_blank" style="font-size: 18px; font-family: Arial, sans-serif; color: #ffffff; text-decoration: none; text-decoration: none; padding-top:12px; padding-bottom:12px; padding-left: 34px; padding-right:34px; border: 2px solid #ffffff; display: inline-block;">Register</a>
+                                                              <a href="https://docs.google.com/forms/d/e/1FAIpQLSephVbWBCeojHabjHdtcbXsM7JIcwedefXX9c4V05mduo4gGQ/viewform?usp=sf_link" target="_blank" style="font-size: 18px; font-family: Arial, sans-serif; color: #ffffff; text-decoration: none; text-decoration: none; padding-top:12px; padding-bottom:12px; padding-left: 34px; padding-right:34px; border: 2px solid #ffffff; display: inline-block;">Register</a>
 
                                                             </td>
                                                           </tr>
