--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -232,7 +232,7 @@
 
                                                                               <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;11am &#45; 1pm</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Location:</strong>&nbsp;Lorem ipsum dolor</div>
+                                                                              <div class="cb-h3" align="left"><strong>Location:</strong>&nbsp;1910 BLDG, 5th Floor</div>
 
                                                                            </td>
                                                                         </tr>
