--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -298,7 +298,7 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                                                 Questions? Contact your new CEO EMILY HUEGEL
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href=""-->
