--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -210,9 +210,9 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                                                                              <div style="padding-bottom:20px;">Inspire your customers, partners and prospects by joining us in the Reston Cloud Solution Hub on Friday, November 2 for an afternoon full of customer demos, solution round tables and more!</div>
 
-                                                                              <div style="padding-bottom:20px;">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                                                              <div style="padding-bottom:20px;">=This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team and take a deep dive into Oracle's technical architecture.</div>
 
                                                                               <div>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>                                                             
                                                                            </td>
@@ -298,7 +298,7 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                 Questions? Contact your new CEO EMILY HUEGEL
+                                                                 Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons and all the upcoming opportunties available to you here in Reston!
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href=""-->
