--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -193,7 +193,7 @@
                                              <tbody>
                                                 <!--Start Headline-->
                                                 <tr>
-                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Subheadline here
+                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: Public Sector Open House
                                                    </td>
                                                 </tr>
                                                 <!--End Headline-->
@@ -212,7 +212,7 @@
 
                                                                               <div style="padding-bottom:20px;">Inspire your customers, partners and prospects by joining us in the Reston Cloud Solution Hub on Friday, November 2 for an afternoon full of customer demos, solution round tables and more!</div>
 
-                                                                              <div style="padding-bottom:20px;">=This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team and take a deep dive into Oracle's technical architecture.</div>
+                                                                              <div style="padding-bottom:20px;">This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team and take a deep dive into Oracle's technical architecture.</div>
 
                                                                               <div>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>                                                             
                                                                            </td>
