--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -193,7 +193,7 @@
                                              <tbody>
                                                 <!--Start Headline-->
                                                 <tr>
-                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: Public Sector Open House
+                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us! Public Sector Open House
                                                    </td>
                                                 </tr>
                                                 <!--End Headline-->
@@ -214,7 +214,7 @@
 
                                                                               <div style="padding-bottom:20px;">This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team and take a deep dive into Oracle's technical architecture.</div>
 
-                                                                              <div>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>                                                             
+                                                                              <div>Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons and all the upcoming opportunties available to you here in Reston! </div>                                                             
                                                                            </td>
                                                                         </tr>
                                                                      </tbody>
@@ -244,7 +244,7 @@
 
                                                                               <div style="font-weight:bold; color:#d07b0b; font-size:16px; padding-bottom:5px;">Additional Info</div>
 
-                                                                              <div class="cb-h3" align="left">Lorem ipsum dolor sit amet, consectetur adipisicing</div>
+                                                                              <div class="cb-h3" align="left">Guest may enjoy a Hub tour, one-on-one Q&A with our Hubsters and lunch with light refreshments. </div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
@@ -298,11 +298,11 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                 Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons and all the upcoming opportunties available to you here in Reston!
+                                                                 Your whole team is welcome to attend! Please reach out to Emily Huegel with any additional questions about this event.  
                                                                   <br />
                                                                   <br />
-                                                                  <!--Put email address in href=""-->
-                                                                  <a href="mailto:john.smith@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
+                                                                  <!--Put email address in href="emily.huegel@oracle.com"-->
+                                                                  <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
                                                               
                                                                </td>
                                                             </tr>
