--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -244,16 +244,16 @@
 
                                                                               <div style="font-weight:bold; color:#d07b0b; font-size:16px; padding-bottom:5px;">Additional Info</div>
 
-                                                                              <div class="cb-h3" align="left">Guest may enjoy a Hub tour, one-on-one Q&A with our Hubsters and lunch with light refreshments. </div>
+                                                                              <div class="cb-h3" align="left">Guest will enjoy a Hub tour, one-on-one Q&A with our Hubsters, and lunch with light refreshments. </div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                                                              <div class="cb-h3" align="left"><strong>Phone Number:<br></strong>706.758.3074</div>
+                                                                              <div class="cb-h3" align="left"><strong>Phone Number:<br></strong>352.422.0774</div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
                                                                              <!--Put destination URL in href=""-->
-                                                                              <div class="cb-h3" align="left"><a href="https://www.oracle.com/index.html" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Register Today</a><br /></div>
+                                                                              <div class="cb-h3" align="left"><a href="https://docs.google.com/forms/d/e/1FAIpQLSephVbWBCeojHabjHdtcbXsM7JIcwedefXX9c4V05mduo4gGQ/viewform?usp=sf_link" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Register Today</a><br /></div>
 
                                                                            </td>
                                                                         </tr>
