--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -210,11 +210,11 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Inspire your customers, partners and prospects by joining us in the Reston Cloud Solution Hub on Friday, November 2 for an afternoon full of customer demos, solution round tables and more!</div>
+                                                                              <div style="padding-bottom:20px;">Inspire your customers, partners and prospects by joining us in the Reston Cloud Solution Hub on Friday, November 2 for an afternoon full of customer demos, solution round tables, and more!</div>
 
-                                                                              <div style="padding-bottom:20px;">This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team and take a deep dive into Oracle's technical architecture.</div>
+                                                                              <div style="padding-bottom:20px;">This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team, and take a deep dive into Oracle's technical architecture.</div>
 
-                                                                              <div>Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons and all the upcoming opportunties available to you here in Reston! </div>                                                             
+                                                                              <div>Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons, and all the upcoming opportunties available to you here in Reston! </div>                                                             
                                                                            </td>
                                                                         </tr>
                                                                      </tbody>
