--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -210,11 +210,11 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Inspire your customers, partners and prospects by joining us in the Reston Cloud Solution Hub on Friday, November 2 for an afternoon full of customer demos, solution round tables, and more!</div>
+                                                                              <div style="padding-bottom:20px;">Inspire your customers, partners and prospects by joining us in the Reston Cloud Solution Hub on Friday, November 2 for an afternoon full of customer demos, solution round tables, and more.</div>
 
                                                                               <div style="padding-bottom:20px;">This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team, and take a deep dive into Oracle's technical architecture.</div>
 
-                                                                              <div>Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons, and all the upcoming opportunties available to you here in Reston! </div>                                                             
+                                                                              <div>Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons, and all the upcoming opportunties available to you here in Reston. </div>                                                             
                                                                            </td>
                                                                         </tr>
                                                                      </tbody>
@@ -298,7 +298,7 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                 Your whole team is welcome to attend! Please reach out to Emily Huegel with any additional questions about this event.  
+                                                                 Please reach out to Emily Huegel with any additional questions about this event.  
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href="emily.huegel@oracle.com"-->
