--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -302,7 +302,7 @@
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href="emily.huegel@oracle.com"-->
-                                                                  <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
+                                                                  <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Email us your questions.</a><br />
                                                               
                                                                </td>
                                                             </tr>
