--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -289,7 +289,7 @@
                                           <table width="100%" cellspacing="0" cellpadding="30" class="devicewidthinner" bgcolor="#ffffff" style="border-top-width: 5px; border-top-style: solid; border-top-color: #f29111; border-right-width: 1px; border-right-style: solid; border-right-color: #cccccc; border-left-width: 1px; border-left-style: solid; border-left-color: #cccccc;  border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #cccccc;">
                                              <tbody>
                                                 <tr>
-                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle">Have questions?</span>
+                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle">We hope to see you soon!</span>
                                                    </td>
                                                 </tr>
                                                 <tr class="row">
@@ -298,7 +298,7 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                 Want to learn more? Please reach out to Emily Huegel for addtional details related to this event.   
+                                                                 Ready to learn more? Please reach out to Emily Huegel for addtional details related to this event.   
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href="emily.huegel@oracle.com"-->
