--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -298,11 +298,11 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                 Ready to learn more? Please reach out to Emily Huegel for addtional details related to this event.   
+                                                                 Have questions? Ready to learn more? Please reach out to Emily Huegel for addtional details related to this event.   
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href="emily.huegel@oracle.com"-->
-                                                                  <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Click here to email us with any further questions.</a><br />
+                                                                  <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Click here to email us with any further inqueries.</a><br />
                                                               
                                                                </td>
                                                             </tr>
