--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -210,18 +210,18 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Inspire your customers, partners and prospects by joining us in the Reston Cloud Solution Hub on Friday, November 2 for an afternoon full of customer demos, solution round tables, and more.</div>
+                                                                              <div style="padding-bottom:20px;"> Inspire your team and learn how the Reston Hub can help you and your customers to transition to the next generation of cloud services. </div>
 
-                                                                              <div style="padding-bottom:20px;">This is a great opportunity to get to know the Reston Hubsters, discuss potential business use cases with our platform managment team, and take a deep dive into Oracle's technical architecture.</div>
+                                                                              <div style="padding-bottom:20px;"> We are hosting an open house for the Public Sector team on Friday, October 26th to experiece various cloud demos. This is a great opporuntity to get to know Reston Hubsters, take a deep dive into solutions, and understand our services and discuss potential business use caes with our team. </div>
 
-                                                                              <div>Dont wait! Register today and join us in the Hub to find out more about workshops, hack-a-thons, and all the upcoming opportunties available to you here in Reston. </div>                                                             
+                                                                              <div>Dont wait! Register today and join us in the Hub.</div>                                                             
                                                                            </td>
                                                                         </tr>
                                                                      </tbody>
                                                                   </table>
                                                                   <!--End Paragraph Text-->
                                                                   <!--Start Link List-->
-                                                                  <table class="devicewidthinner" align="right" width="35%" cellspacing="0" cellpadding="0" border="0" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; text-align:left; word-break:break-word;">
+                                                                  <table class="devicewidthinner" align="right" widInspireth="35%" cellspacing="0" cellpadding="0" border="0" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; text-align:left; word-break:break-word;">
                                                                      <tbody>
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" valign="top" style="border-left-width: 4px; border-left-style: solid; border-left-color: #d07b0b; padding-left:10px;">
