--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -219,20 +219,20 @@
                                                                         </tr>
                                                                      </tbody>
                                                                   </table>
-                                                                  <!--End Paragraph Text-->
-                                                                  <!--Start Link List-->
-                                                                  <table class="devicewidthinner" align="right" widInspireth="35%" cellspacing="0" cellpadding="0" border="0" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; text-align:left; word-break:break-word;">
+                                                                   <!--End Paragraph Text-->
+                                                                   <!--Start Link List-->
+                                                    <table class="devicewidthinner" align="right" width="35%" cellspacing="0" cellpadding="0" border="0" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; text-align:left; word-break:break-word;">
                                                                      <tbody>
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" valign="top" style="border-left-width: 4px; border-left-style: solid; border-left-color: #d07b0b; padding-left:10px;">
 
                                                                               <div style="font-weight:bold; color:#d07b0b; font-size:16px; padding-bottom:5px;">Event Details</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;November 2, 2018</div>
+                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;March 8, 2018</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;11:00 am &#45; 1:00 pm</div>
+                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;12pm &#45; 1pm</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Location:</strong>&nbsp;1910 BLDG, 5th Floor</div>
+                                                                              <div class="cb-h3" align="left"><strong>Location:</strong>&nbsp;Lorem ipsum dolor</div>
 
                                                                            </td>
                                                                         </tr>
