--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -228,7 +228,7 @@
 
                                                                               <div style="font-weight:bold; color:#d07b0b; font-size:16px; padding-bottom:5px;">Event Details</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;Friday, November 2, 2018</div>
+                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;November 2, 2018</div>
 
                                                                               <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;12:00 am &#45; 1:00 pm</div>
 
