--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -94,6 +94,7 @@
                                               <td align="left" class="no-padding" style="padding-left: 10px;">
                                                  <!--Oracle Logo-->
                                                  <img id="logo" width="150" border="0" style="display:block;" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle">
+                                               <img id="cloudSolutionLogo" width="150" border="0" style="display:block;" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
                                               </td>
                                            </tr>
                                         </table>
