--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -6,6 +6,7 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Oracle</title>
     <style>
+     #hublogo {display:inline};
        #outlook a {padding:0;}
        a {word-break: normal !important;}
        body{width:100% !important; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; margin:0px; padding:0; background-color:#FFFFFF; -webkit-font-smoothing: antialiased;}
@@ -94,7 +95,7 @@
                                               <td align="left" class="no-padding" style="padding-left: 10px;">
                                                  <!--Oracle Logo-->
                                                  <img id="logo" width="150" border="0" style="display:block;" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle">
-                                               <img id="logo" width="150" border="0" style="display:block;" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
+                                               <img id="hublogo" width="150" border="0" style="display:block;" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
                                               </td>
                                            </tr>
                                         </table>
