--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -6,7 +6,9 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Oracle</title>
     <style>
-     #hublogo {display:inline-block};
+     #hublogo {display:inline-block;
+     float: left;
+     }
        #outlook a {padding:0;}
        a {word-break: normal !important;}
        body{width:100% !important; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; margin:0px; padding:0; background-color:#FFFFFF; -webkit-font-smoothing: antialiased;}
