--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -6,8 +6,7 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Oracle</title>
     <style>
-     #hublogo {display:inline-block;
-     float: left;
+     #hublogo {
      }
        #outlook a {padding:0;}
        a {word-break: normal !important;}
