--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -95,9 +95,10 @@
                                            <tr>
                                               <td align="left" class="no-padding" style="padding-left: 10px;">
                                                  <!--Oracle Logo-->
-                                                 <img id="logo" width="150" border="0" style="display:block;" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle">
-                                               <img id="hublogo" width="150" border="0" style="display:block;" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
-                                              </td>
+                                               <div>
+                                       <img id="logo" width="150" border="0" style="display:block;" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle"><img id="hublogo" width="150" border="0" style="display:block;" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
+                                               </div>
+                                                </td>
                                            </tr>
                                         </table>
                                         <!--End Logo-->
