--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -95,8 +95,8 @@
                                            <tr>
                                               <td align="left" class="no-padding" style="padding-left: 10px;">
                                                  <!--Oracle Logo-->
-                                               <div style="display:block;">
-                                       <img id="logo" width="150" border="0" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle"><img id="hublogo" width="150" border="0" style="display:block;" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
+                                               <div style="display:inline-block;">
+                                       <img id="logo" width="150" border="0" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle"><img id="logo" width="150" border="0" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
                                                </div>
                                                 </td>
                                            </tr>
