--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -96,7 +96,7 @@
                                               <td align="left" class="no-padding" style="padding-left: 10px;">
                                                  <!--Oracle Logo-->
                                                <div style="display:inline-block;" width="302">
-                                       <img id="logo" width="150" border="0" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle"><img id="logo" width="150" border="0" src="OCSH Logo small.jpg" alt="OracleSolutionHub">
+                                       <img id="logo" width="150" border="0" src="newlogo.jpg" alt="Oracle">
                                                </div>
                                                 </td>
                                            </tr>
