--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -96,7 +96,7 @@
                                               <td align="left" class="no-padding" style="padding-left: 10px;">
                                                  <!--Oracle Logo-->
                                                <div style="display:inline-block;" width="302">
-                                       <img id="logo" width="150" border="0" src="newlogo2.png" alt="Oracle">
+                                       <img id="logo" width="150" border="0" src="ocsh.png" alt="Oracle">
                                                </div>
                                                 </td>
                                            </tr>
