--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -216,7 +216,7 @@
 
                                                                               <div style="padding-bottom:20px;"> Inspire your team and learn how the Reston Hub can help you and your customers to transition to the next generation of cloud services. </div>
 
-                                                                              <div style="padding-bottom:20px;"> We are hosting an open house for the Public Sector team on Friday, October 26th to experiece various cloud demos. This is a great opporuntity to get to know Reston Hubsters, take a deep dive into solutions, and understand our services and discuss potential business use caes with our team. </div>
+                                                                              <div style="padding-bottom:20px;"> We are hosting an open house for the Public Sector team on Friday, November 2nd to experiece various cloud demos. This is a great opporuntity to get to know Reston Hubsters, take a deep dive into solutions, and understand our services and discuss potential business use caes with our team. </div>
 
                                                                               <div>Dont wait! Register today and join us in the Hub.</div>                                                             
                                                                            </td>
