--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -234,7 +234,7 @@
 
                                                                               <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;November 2, 2018</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;12:00 am &#45; 1:00 pm</div>
+                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;12:00 pm &#45; 1:00 pm</div>
 
                                                                               <div class="cb-h3" align="left"><strong>Location:</strong>&nbsp;1910 BLDG, 5th Floor</div>
 
