--- a/orange-without-table.html
+++ b/orange-without-table.html
@@ -214,10 +214,8 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;"> According to a new report from Gartner, cloud solutions, cybersecurity and analytics are all expected to see a big spending increase within the public sector through 2018:        <a href="https://www.gartner.com/smarterwithgartner/the-2018-cio-agenda-infographic
- ">https://www.gartner.com/smarterwithgartner/the-2018-cio-agenda-infographic
- </a>
-</div>
+                                                                              <div style="padding-bottom:20px;"> According to a new report from Gartner, cloud solutions, cybersecurity and analytics are all expected to see a big spending increase within the public sector through 2018:
+                                                                               <a href="https://www.gartner.com/smarterwithgartner/the-2018-cio-agenda-infographic">https://www.gartner.com/smarterwithgartner/the-2018-cio-agenda-infographic</a></div>
 
                                                                               <div style="padding-bottom:20px;"> The Reston Hub is hosting an Open House for all Oracle Public Sector teams on Friday, November 2nd.  Come have lunch with the Hubsters, view our demos, and discuss additional potential use cases that we can build for you.  Our goal is to show you how the Reston Hub can help Public Sector customers transition to the Oracle Cloud </div>
 
