--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -6,7 +6,7 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Oracle</title>
     <style>
-       #outlook a {padding:0;}
+       #hublogo a {padding:0;}
        a {word-break: normal !important;}
        body{width:100% !important; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; margin:0px; padding:0; background-color:#FFFFFF; -webkit-font-smoothing: antialiased;}
        img {outline:none; text-decoration:none; border:none; -ms-interpolation-mode: bicubic; }
@@ -93,7 +93,7 @@
                                            <tr>
                                               <td align="left" class="no-padding" style="padding-left: 10px;">
                                                  <!--Oracle Logo-->
-                                                 <img id="logo" width="150" border="0" style="display:block;" src="http://www.oracle.com/us/dm/182x66-em-oracle-logo-4125703.jpg" alt="Oracle">
+                                                 <img id="logo" width="150" border="0" style="display:block;" src="ocsh.png" alt="Oracle">
                                               </td>
                                            </tr>
                                         </table>
